# unit_test_template

./: CMakeLists.txt  README.md  main.cpp
tests/: YourClass.h  test.cpp
